<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <Button
        android:id="@+id/btnRockerPositive"
        android:layout_width="0dp"
        android:layout_height="60dp"
        android:layout_marginStart="5dp"
        android:layout_marginEnd="10dp"
        android:layout_marginBottom="5dp"
        android:alpha=".5"
        android:backgroundTint="?colorOnPrimarySurface"
        android:elevation="10dp"
        android:enabled="false"
        android:text="@string/ok"
        android:textColor="?android:textColorTertiary"
        android:textSize="16sp"
        app:cornerRadius="13dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/btnRockerNegative" />

    <Button
        android:id="@+id/btnRockerNegative"
        android:layout_width="0dp"
        android:layout_height="60dp"
        android:layout_marginStart="10dp"
        android:layout_marginEnd="5dp"
        android:layout_marginBottom="5dp"
        android:backgroundTint="?colorOnPrimarySurface"
        android:elevation="10dp"
        android:text="@string/cancel"
        android:textColor="?android:textColorTertiary"
        android:textSize="16sp"
        app:cornerRadius="13dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/btnRockerPositive"
        app:layout_constraintStart_toStartOf="parent" />

    <ImageButton
        android:id="@+id/btnQuestion"
        android:layout_width="40dp"
        android:layout_height="40dp"
        android:background="@null"
        android:padding="7dp"
        android:scaleType="fitCenter"
        android:src="@drawable/ic_question"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:tint="@color/selector_light_gray_on_click" />

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/constraintLayoutCross"
        android:layout_width="0dp"
        android:layout_height="0dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintDimensionRatio="1"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintWidth_percent="0.8">

        <ImageView
            android:id="@+id/cross"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            app:srcCompat="@drawable/ic_cross" />

    </androidx.constraintlayout.widget.ConstraintLayout>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:layout_editor_absoluteX="40dp"
        tools:layout_editor_absoluteY="181dp">

        <ImageView
            android:id="@+id/rocker"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:tag="origin"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintDimensionRatio="1"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintWidth_percent="0.8"
            app:srcCompat="@drawable/ic_soccer" />

    </androidx.constraintlayout.widget.ConstraintLayout>

    <TextView
        android:id="@+id/tvPasswordHint"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/password_hint"
        android:textColor="?android:attr/textColorTertiary"
        android:textSize="14sp"
        android:visibility="visible"
        app:layout_constraintBottom_toTopOf="@+id/constraintLayoutCross"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <androidx.cardview.widget.CardView
        android:id="@+id/cardPassword"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:visibility="invisible"
        app:cardBackgroundColor="?colorOnPrimarySurface"
        app:cardCornerRadius="100dp"
        app:cardElevation="10dp"
        app:contentPadding="3dp"
        app:layout_constraintBottom_toTopOf="@+id/constraintLayoutCross"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="horizontal">

            <androidx.cardview.widget.CardView
                android:id="@+id/cardPasswordText"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:elevation="0dp"
                android:minWidth="45dp"
                android:outlineProvider="none"
                app:cardBackgroundColor="?cardBackgroundColor"
                app:cardCornerRadius="100dp"
                app:contentPaddingLeft="13dp"
                app:contentPaddingRight="13dp"
                app:layout_constraintBottom_toTopOf="@+id/cross"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                tools:cardCornerRadius="100dp">

                <TextView
                    android:id="@+id/tvPassword"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:ellipsize="none"
                    android:fontFamily="sans-serif-condensed-light"
                    android:inputType="textPassword"
                    android:letterSpacing="0.2"
                    android:minWidth="9dp"
                    android:singleLine="true"
                    android:textColor="?android:textColorTertiary"
                    android:textSize="34sp"
                    android:textStyle="bold"
                    android:typeface="serif" />
            </androidx.cardview.widget.CardView>

            <ImageButton
                android:id="@+id/btnBackspace"
                android:layout_width="30dp"
                android:layout_height="match_parent"
                android:layout_marginStart="7dp"
                android:layout_marginEnd="10dp"
                android:background="@android:color/transparent"
                android:scaleType="fitCenter"
                android:src="@drawable/ic_backspace"
                app:tint="@color/selector_dark_gray_on_click" />

        </LinearLayout>

    </androidx.cardview.widget.CardView>

</androidx.constraintlayout.widget.ConstraintLayout>